--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 }
 
 body {
+  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -12,7 +14,8 @@ body {
 
 /*Header part*/
 
-.header {
+header {
+  height: 100%;
   display: flex;
   justify-content: space-around;
   background-color: #1F2937;
@@ -48,32 +51,34 @@ a:hover {
 .hero {
   background-color: #1F2937;
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-
+  justify-content: center;
+  gap: 18px;
+  padding-bottom: 120px;
 }
 
-.hero-left,
-.hero-right {
-  display: flex;
-}
 
 .hero-left {
+  width: 30%;
+  display: flex;
   flex-direction: column;
-  margin: 100px;
   align-items: flex-start;
   text-align: left;
   gap: 18px;
+
 }
 
 .hero-right {
-  margin: 100px;
-
+  display: flex;
+  width: 30%;
+  height: auto;
 }
 
+
+
 .image {
-  width: 350px;
-  height: auto;
+  width: 100%;
+  height: 100%;
+  border: 5px solid #F9FAF8;
 }
 
 h1 {
@@ -82,7 +87,7 @@ h1 {
   font-size: 48px;
 }
 
-p {
+.subtext p {
   color: #E5E7EB;
   font-size: 18px;
 }
@@ -103,4 +108,48 @@ button:hover {
   background-color: #F9FAF8;
   border: 2px solid #3882F6;
   color: #3882F6;
+}
+
+/*Main Part*/
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h2 {
+  font-weight: bold;
+  color: #1F2937;
+  font-size: 36px;
+  height: 100px;
+  padding-top: 50px;
+}
+
+/*Info*/
+
+.animals {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.images {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  margin-left: 15px;
+  padding-left: 40px;
+  gap: 18px;
+}
+
+.images img {
+  height: 200px;
+  width: 200px;
+  border-radius: 25px;
+  border: 5px solid #3882F6;
+}
+
+.images p {
+  padding-right: 45px;
 }
