--- a/style.css
+++ b/style.css
@@ -2,10 +2,11 @@
   margin: 0;
   padding: 0;
   font-family: Roboto, sans-serif;
+  box-sizing: border-box;
 }
 
 body {
-  height: 100%;
+  height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -15,7 +16,8 @@ body {
 /*Header part*/
 
 header {
-  height: 100%;
+  height: auto;
+  width: 100%;
   display: flex;
   justify-content: space-around;
   background-color: #1F2937;
@@ -49,28 +51,29 @@ a:hover {
 /*Hero part*/
 
 .hero {
+
   background-color: #1F2937;
   display: flex;
   justify-content: center;
   gap: 18px;
   padding-bottom: 120px;
+  flex-wrap: wrap;
 }
 
 
 .hero-left {
-  width: 30%;
+  width: 40%;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
   text-align: left;
   gap: 18px;
 
 }
 
 .hero-right {
-  display: flex;
-  width: 30%;
+  width: 300px;
   height: auto;
+  display: flex;
 }
 
 
@@ -123,10 +126,16 @@ h2 {
   color: #1F2937;
   font-size: 36px;
   height: 100px;
-  padding-top: 50px;
+
 }
 
 /*Info*/
+
+.info {
+  display: flex;
+  flex-direction: column;
+  margin: 5%;
+}
 
 .animals {
   display: flex;
@@ -152,4 +161,81 @@ h2 {
 
 .images p {
   padding-right: 45px;
+}
+
+/*Author*/
+
+.author {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  background-color: #E5E7EB;
+  flex-direction: column;
+  color: #1F2937;
+  font-size: 36px;
+  text-align: left;
+  font-style: italic;
+}
+
+.content-author {
+  margin: 10%;
+}
+
+.thor {
+  font-size: 23px;
+  font-weight: bold;
+  text-align: right;
+}
+
+/*Card*/
+
+.card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.content {
+  display: flex;
+  background-color: #3882F6;
+  font-size: 18px;
+  border-radius: 8px;
+  justify-content: center;
+  align-items: center;
+  color: #F9FAF8;
+  margin: 5%;
+  text-align: left;
+  gap: 15%;
+  padding: 6%;
+
+}
+
+.c-right {
+  flex: 1;
+}
+
+.c-left {
+  flex: 2;
+}
+
+h3 {
+  font-weight: bold;
+}
+
+.c-right button {
+  border: 3px solid #F9FAF8;
+}
+
+/*footer*/
+
+footer {
+  height: auto;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #1F2937;
+  font-size: 18px;
+  color: #F9FAF8;
+  padding: 1%;
 }
