--- a/style.css
+++ b/style.css
@@ -56,18 +56,18 @@ ul a:hover {
   display: flex;
   justify-content: space-evenly;
   gap: 18px;
-  padding-bottom: 120px;
+  padding-top: 90px;
+  padding-bottom: 90px;
   flex-wrap: wrap;
 }
 
 
 .hero-left {
-  width: 40%;
   display: flex;
   flex-direction: column;
   text-align: left;
   gap: 18px;
-
+  width: 50%;
 }
 
 .hero-right {
@@ -164,6 +164,7 @@ h2 {
 }
 
 .images p {
+  padding-bottom: 20px;
   padding-right: 45px;
   align-self: flex-start;
 }
